# MicroSeg

./: LICENSE  Makefile  README.md  docker-compose.gpu.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.gpu  pyproject.toml  requirements-ml.txt  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: jobs.py  projects.py  tasks.py
backend/app/core/: storage.py  tasks.py
backend/app/ml/: features.py  inference.py  interactive.py  morphometry.py  percolation.py  train_seg.py  train_yolo.py  volume.py
backend/app/ml/models/: efficientnet_unet.py  losses.py
backend/app/schemas/: models.py
backend/app/workers/: celery_app.py  jobs.py
backend/tests/: conftest.py  test_algorithms.py  test_api.py
deploy/nginx/: nginx.conf
docs/: API.md  ARCHITECTURE.md  MIGRATION.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  style.css
frontend/src/api/: client.js
frontend/src/components/: AnnotationCanvas.vue  PercolationSim.vue  TaskMonitor.vue  VolumeViewer3D.vue
frontend/src/composables/: useJobs.js
frontend/src/router/: index.js
frontend/src/stores/: projects.js  tasks.js
frontend/src/views/: AnalyzeView.vue  AnnotateView.vue  ProjectsView.vue  TrainView.vue  VolumeView.vue
